# crossroads-uk

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: ai-disclosure.md  data-sources.md  methodology.md  schema.md  spec.md
docs/maintenance/: pypi-release.md  updating-ons-boundaries.md
docs/plans/001_project_foundation/: 00-overview.md  01-package-skeleton.md  02-transformer-registry.md  03-orchestrator-harness.md
docs/plans/002_quality_engine/: 00-overview.md  01-layered-schema-helpers.md  02-ledger-quarantine.md  03-invariants-build-integration.md
docs/plans/003_spatial_infrastructure/: 00-overview.md  01-spatial-extension.md  02-boundary-ingestion.md  03-temporal-slicing.md  04-spatial-indices.md
docs/plans/003_spatial_infrastructure/ONS_boundary_vintages/: 00-overview.md  01-manifest-refactor.md  02-populate-vintages.md  03-maintenance-script.md  04-update-runbook.md
docs/plans/004_stats19_ingestion/: 00-overview.md  01-download-bronze.md  02-collision-silver.md  03-vehicle-casualty-linkage.md  04-spatial-join.md  05-reference-data.md  06-keep-in-place-silver.md  07-core-severity-audit.md  08-completeness-report.md  09-labelled-views.md
docs/plans/005_console_architecture/: 00-overview.md  01-wizard-prompts.md  02-build-wiring-entrypoint.md  03-dataset-selection.md
docs/plans/006_weather_integration/: 00-overview.md  01-dependency-resolution.md  02-weather-grid-source.md  03-stats19-weather-stamping.md
docs/plans/007_release_prep/: 00-overview.md  01-versioning.md  02-data-licensing.md  03-user-facing-docs.md  04-reference-fixes-hygiene.md  05-source-comment-cleanup.md  06-ci-workflow.md  07-db-provenance.md  08-schema-dictionary.md
docs/plans/008_weather_chunking/: 00-weather-chunking.md
docs/plans/009_solar_geometry/: 00-solar-geometry.md
docs/plans/010_weather_credentials/: 00-cds-key-prompt.md
docs/plans/011_bank_holidays/: 00-overview.md  01-bank-holidays-source.md  02-collision-stamp.md
docs/plans/012_aadf_traffic/: 00-overview.md  01-aadf-source.md  02-risk-showcase-test.md  03-wizard-temporal-warning.md  04-docs-readme.md  showcase-output.txt
docs/plans/013_pypi_publishing/: 00-overview.md  01-version-bump.md  02-packaging-validation.md  03-publish-workflow.md  04-release-runbook.md
docs/plans/014_weather_setup_ux/: 00-weather-error-messaging.md
scripts/: build_stats19_codebook.py  build_stats19_column_manifest.py  build_weather_fixture.py  update_ons_boundaries.py
src/crossroads/: __init__.py  client.py  console.py  net.py  quality.py  registry.py  sql.py
src/crossroads/reference/: README.md  stats19_codebook.csv  stats19_columns.csv
src/crossroads/transformers/: aadf.py  bank_holidays.py  base.py  ons_boundaries.json  spatial.py  stats19.py  weather.py
tests/: conftest.py  test_aadf.py  test_bank_holidays.py  test_client.py  test_console.py  test_docs_links.py  test_net.py  test_package.py  test_provenance.py  test_quality.py  test_readme_examples.py  test_registry.py  test_release.py  test_schema_doc.py  test_spatial.py  test_sql_escaping.py  test_stats19.py  test_update_script.py  test_weather.py  test_weather_errors.py
tests/fixtures/aadf/: README.md  dft_traffic_counts_aadf_sample.csv
tests/fixtures/bank_holidays/: README.md  bank-holidays-sample.json
tests/fixtures/ons/: README.md
tests/fixtures/ons/ctyua_2024/: ctyua_sample.dbf  ctyua_sample.geojson  ctyua_sample.shp  ctyua_sample.shx
tests/fixtures/ons/ctyua_2025/: ctyua_sample.geojson
tests/fixtures/ons/lad_2024/: lad_sample.dbf  lad_sample.geojson  lad_sample.shp  lad_sample.shx
tests/fixtures/ons/lad_2025/: lad_sample.geojson
tests/fixtures/stats19/: README.md  dft-road-casualty-statistics-casualty-2023.csv  dft-road-casualty-statistics-collision-2023.csv  dft-road-casualty-statistics-vehicle-2023.csv
tests/fixtures/weather/: README.md  era5_land_sample.nc
