[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "crossroads-uk"
dynamic = ["version"]
description = "A reproducible pipeline for unifying UK road-safety, weather, and boundary data into a single local DuckDB database."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "wpatke" }]
keywords = ["uk", "road-safety", "stats19", "duckdb", "etl", "reproducible-research"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "duckdb>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pyyaml>=6.0",  # Parses CITATION.cff in the release validation test
]
# Heavy, opt-in dependencies for the ERA5-Land weather source. These are imported
# lazily inside crossroads.transformers.weather, so the module (and the default
# test suite) load fine without them installed.
weather = [
  "cdsapi>=0.7",     # Copernicus Climate Data Store API client (real downloads only)
  "xarray>=2023.1",  # NetCDF -> DataFrame parsing
  "netCDF4>=1.6",    # NetCDF file backend for xarray
]

[project.scripts]
crossroads = "crossroads.console:main"

[project.urls]
Homepage = "https://github.com/wpatke/crossroads-uk"
Repository = "https://github.com/wpatke/crossroads-uk"
Issues = "https://github.com/wpatke/crossroads-uk/issues"
Changelog = "https://github.com/wpatke/crossroads-uk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/crossroads"]

# Derive the version from git via hatch-vcs (the Hatchling wrapper around the
# standard setuptools-scm engine). The maintainer owns MAJOR.MINOR by cutting a
# GitHub Release (which creates a tag like v1.1.0); everything else is automatic:
#   - On the exact release tag the version is clean, e.g. "1.1.0".
#   - Between releases it uses setuptools-scm's default scheme, which appends the
#     commit distance AND the exact git commit hash, e.g. "1.1.1.dev3+g1a2b3c4"
#     (3 commits after v1.1.0, at commit 1a2b3c4). Every dev build therefore pins
#     its exact source, which is what makes a result reproducible.
#   - fallback_version: used only when there is no git at all (e.g. building from a
#     source archive with no history), so a build never fails.
[tool.hatch.version]
source = "vcs"
raw-options = { fallback_version = "0.0.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests (slow, or exercising real external services such as the live
# ONS portal) are deselected by default so the normal suite stays fast, offline
# and deterministic. A human runs them deliberately with:
#   pytest -m integration
addopts = "-m 'not integration'"
markers = [
  "integration: end-to-end tests against real components or live services (may be slow or reach the internet); deselected by default, run with -m integration",
  "live: opt-in tests that hit the real Copernicus CDS (needs ~/.cdsapirc and CROSSROADS_RUN_LIVE=1); skipped by default",
]
